tests/snapshots/snapshot_test__display_variables.snap
---
source: tests/snapshot_test.rs
expression: display
---
Text:
  speaker: ~
  text: "Your name is {var:player_name}."
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
