tests/snapshots/snapshot_test__display_visual_2.snap
---
source: tests/snapshot_test.rs
expression: display2
---
Text:
  speaker: ~
  text: Alice appears.
  visual:
    background: assets/bg_forest.png
    character: assets/char_alice.png
    char_pos: center
    characters: []
    nvl_mode: false
