tests/snapshots/snapshot_test__full_input.snap
---
source: tests/snapshot_test.rs
expression: display2
---
Input:
  input:
    var: player_name
    prompt: "Enter your name:"
    default: Hero
  visual:
    background: assets/bg_room.png
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
