tests/snapshots/snapshot_test__full_opening.snap
---
source: tests/snapshot_test.rs
expression: display1
---
Text:
  speaker: ~
  text: The story begins...
  visual:
    background: assets/bg_room.png
    character: ~
    char_pos: center
    characters: []
