tests/snapshots/snapshot_test__persist_all_cleared.snap
---
source: tests/snapshot_test.rs
expression: display4
---
Text:
  speaker: ~
  text: All cleared
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
