tests/snapshots/snapshot_test__persist_char_cleared.snap
---
source: tests/snapshot_test.rs
expression: display3
---
Text:
  speaker: ~
  text: "Character cleared, background persists"
  visual:
    background: assets/bg.png
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
