tests/snapshots/snapshot_test__persist_initial.snap
---
source: tests/snapshot_test.rs
expression: display1
---
Text:
  speaker: ~
  text: Initial state
  visual:
    background: assets/bg.png
    character: assets/char.png
    char_pos: center
    characters: []
